Removed primitive constructor objects