@@ -10,7 +10,7 @@ public class IPAddressBasedGeoAcquirer {
 		final JSONObject children = new JSONObject(source);
 		final double latitude = Double.parseDouble(children.optString("latitude"));
 		final double longitude = Double.parseDouble(children.optString("longitude"));
-		final Coordinates coords = new Coordinates(latitude, longitude, new Double(0), 0, new Double(0), null, new Double(0));
+		final Coordinates coords = new Coordinates(latitude, longitude, Double.valueOf(0), 0, Double.valueOf(0), null, Double.valueOf(0));
 		return new Position(coords, -1);
 	}
 }
